--- a/index.css
+++ b/index.css
@@ -9,19 +9,33 @@ body {
 }
 
 #root {
-  margin: 10px;
+  max-width: 480px;
+  margin: 10px auto;
+}
+
+input {
+  width: 100%;
+  padding: 2px;
 }
 
 .todo {
+  list-style-type: none;
   padding: 3px;
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid #e9e9e9;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .todo:hover {
-  background-color: #f4f4f4;
+  border-bottom: 1px solid #a8a8a8;
 }
 
-button {
-  margin-left: 5px;
+.btn-completed {
+  color: #fafafa;
+}
+
+.btn-delete:hover {
+  color: red;
 }
