--- a/index.css
+++ b/index.css
@@ -18,7 +18,12 @@ input {
   padding: 2px;
 }
 
-.todo {
+ul {
+  background-color: rgb(253, 253, 253);
+  border-radius: 5px;
+}
+
+ul li {
   list-style-type: none;
   padding: 3px;
   border-bottom: 1px solid #e9e9e9;
@@ -28,8 +33,13 @@ input {
   align-items: center;
 }
 
-.todo:hover {
+ul li:hover {
   border-bottom: 1px solid #a8a8a8;
+}
+
+.todo {
+  width: 100%;
+  text-align: center;
 }
 
 .btn-completed {
@@ -38,4 +48,20 @@ input {
 
 .btn-delete:hover {
   color: red;
+}
+
+.btn-toggleAll {
+  cursor: pointer;
+  color: #00A86B;
+  font-size: 1.2em;
+}
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.banner-status {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
 }
